--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
+<script src="scripts/walker.js"></script>
+<script src="scripts/tree.js"></script>
 <script src="scripts/sketch.js"></script>
+
 
 
 </html>
